@@ -10,8 +10,9 @@
       \item Rcpp now sets and puts the RNG state upon each entry to an Rcpp
       function, ensuring that nested invocations of Rcpp functions manage the
       RNG state as expected
-      \item The \code{R::pythag} wrapper has been commented out as underlying
-      function has been gone from R since release 2.14.0.
+      \item The \code{R::pythag} wrapper has been commented out; the underlying
+      function has been gone from R since 2.14.0, and \code{::hypot()} (part of
+      C99) is now used unconditionally for complex numbers.
     }
     \itemize{
       \item The \code{long long} type can now be used on 64-bit Windows (Kevin
