@@ -1,3 +1,10 @@
+2018-03-01  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/sugar/functions/complex.h (Rcpp): Remove RCPP_HYPOT
+        macro and use ::hypot() throught as it is provided with C99
+
+        * inst/include/Rcpp/sugar/undoRmath.h: Also uncomment pythag here
+
 2018-02-28  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/Rmath.h (R): Rf_pythag has been remove in R 2.14.0
